# agent-flow-studio

./: .gitignore  CONTEXT-MAP.md  CONTEXT.md  IDENTITY.md  Iniciar Agentes IA.cmd  NEXT-STEPS.MD  README.md  package-lock.json  package.json  plano.txt  playwright.ui.config.cjs  projeto-final.md  runtime.manifest.json  tsconfig.json  tutorial.txt
apps/: CONTEXT.md
docs/: CONTEXT.md  developer-guide.md  expanded-plan-requirement-audit.md  external-integrations-homologation.md  future-authentication.md  future-background-jobs.md  future-streaming.md  implementation-status.md  isolation-levels-runbook.md  local-models-runbook.md  local-studio-plan.md  master-implementation-plan.md  multiagent-operations-runbook.md  operator-guide.md  plan.md  proup-capability-parity.md  quickstart-10-min.md  release-gate-matrix.md  release-privacy-audit.md  tutorial-criar-agente-simples-exportar-api.md  user-guide.md  vm-real-smoke-runbook.md
examples/: CONTEXT.md
examples/reference-interview-runtime/: .env.example  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
examples/reference-interview-runtime/app/: __init__.py  cache.py  db.py  graph.py  llm.py  main.py  models.py  repo.py  schemas.py  service.py  settings.py  worker.py
examples/reference-interview-runtime/app/prompts/: system.md
examples/reference-interview-runtime/migrations/: 001_init.sql
examples/reference-interview-runtime/tests/: conftest.py  test_reference_runtime.py
flows/: CONTEXT.md
tools/: CONTEXT.md  agent-flow-vm-guest-agent.py  agent-flow-vm-runner-microvm.py  agent-flow-vm-runner-qemu.py  (+43 more)
(+88 files in other folders)
